--- a/src/index.css
+++ b/src/index.css
@@ -117,6 +117,7 @@ body{
   .checkoutTable td{
     padding:0px;
     font-size: 16px;
+    font-weight: bold;
   }
   .checkoutTable img{
     width: 150px;
@@ -147,11 +148,22 @@ body{
     color: #FFF;
     text-decoration: none;
   }
-
+  .grandTotal{
+    font-size: 42px;
+    font-weight: bold;
+  }
   .nothingInCart{
     font-size: 24px;
     margin-top: 50px;
     text-align: center;
+  }
+  .freeShipping{
+    font-weight: bold;
+    color: forestgreen;
+  }
+  .noShipping{
+    color: brown;
+    font-weight: bold;
   }
 
 
@@ -175,4 +187,29 @@ body{
   }
   nav a:visited{
     color: black;
+  }
+
+  .grandTotal{
+    font-size: 42px;
+    font-weight: bold;
+  }
+
+  .freeShipping{
+    font-size: 25px;
+    color: rgb(30, 201, 73);
+    font-weight: bold;
+  }
+
+  .noFreeShipping{
+    font-size: 25px;
+    color: rgb(201, 30, 30);
+    font-weight: bold;
+  }
+
+  #123{
+    width: 70%
+  }
+
+  #223{
+    width: 20%
   }
